@@ -9,7 +9,7 @@
     <properties>
         <maven.compiler.release>21</maven.compiler.release>
         <wiremock.version>3.13.2</wiremock.version>
-        <javafx.mainClass>ste.ai.qq.demo.DemoApplication</javafx.mainClass>
+        <mainClass>ste.ai.qq.demo.QuickQuestionDemo</mainClass>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <assertj.version>3.26.3</assertj.version>
         <javafx.version>21.0.10</javafx.version>
@@ -40,11 +40,6 @@
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx-web</artifactId>
-            <version>${javafx.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
             <version>${javafx.version}</version>
         </dependency>
@@ -57,6 +52,11 @@
             <groupId>dev.dirs</groupId>
             <artifactId>directories</artifactId>
             <version>26</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.stefanofornari</groupId>
+            <artifactId>vncviewerfx</artifactId>
+            <version>0.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -77,21 +77,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.openjfx</groupId>
-            <artifactId>javafx-swing</artifactId>
-            <version>${javafx.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.testfx</groupId>
             <artifactId>testfx-core</artifactId>
             <version>${testfx.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.wiremock</groupId>
-            <artifactId>wiremock</artifactId>
-            <version>${wiremock.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -101,24 +89,9 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.github.stefanofornari</groupId>
-            <artifactId>lambda-loop</artifactId>
-            <version>0.6.3</version>
-            <scope>test</scope>
-            <type>jar</type>
-        </dependency>
-        <dependency>
             <groupId>com.github.stefanbirkner</groupId>
             <artifactId>system-lambda</artifactId>
             <version>1.2.1</version>
-            <scope>test</scope>
-            <type>jar</type>
-        </dependency>
-        <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20251224</version>
-            <type>jar</type>
         </dependency>
     </dependencies>
     <build>
@@ -135,17 +108,37 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>${javafx.mainClass}</mainClass>
+                    <mainClass>${mainClass}</mainClass>
                     <options>
-                        <!--option>-Djavafx.verbose=true</option-->
+                        <option>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</option>
+                        <option>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</option>
+                        <option>--add-opens=java.desktop/java.awt=ALL-UNNAMED</option>
+                        <option>--add-opens=java.base/java.lang=ALL-UNNAMED</option>
+                        <!--<option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8000</option>-->
                     </options>
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.2</version>
+                <version>3.5.6</version>
                 <configuration>
+                    <forkCount>1</forkCount>
+                    <reuseForks>false</reuseForks>
                     <useModulePath>false</useModulePath>
+                    <includes>
+                        <include>**/*Spec.java</include>
+                    </includes>
+                    <systemPropertyVariables>
+                        <testfx.robot>glass</testfx.robot>
+                        <testfx.headless>true</testfx.headless>
+                        <prism.order>true</prism.order>
+                        <prism.order>sw</prism.order>
+                        <prism.text>t2k</prism.text>
+                        <java.awt.headless>true</java.awt.headless>
+                        <java.util.logging.config.file>src/test/resources/logging.properties</java.util.logging.config.file>
+                        <artifactVersion>${project.version}</artifactVersion>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
         </plugins>
